<resources>
    <string name="app_name">MyFirstAppMovie</string>
    <string name="text_do_icone_do_filme">Imagem do filme</string>
    <string name="genres">Gêneros</string>
    <string name="title_activity_old_genres">OldGenresActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="click">Clicar</string>
    <string name="click_disabled">Clicado</string>
    <string name="ok">Ok</string>
    <string name="genres_error">Ocorreu um erro ao baixar os generos</string>
    <string name="try_again">Try again!</string>
    <string name="director">Director:</string>
    <string name="sinopse">Sinopse:</string>
    <string name="estreia">Estreia:</string>
    <string name="popularidade">Popularidade:</string>
    <string name="home">Home</string>
    <string name="settings">Configurações</string>
    <string name="settings_screen_sign_out">Sign Out</string>
    <string name="settings_screen_sign_in">Sign In</string>
    <string name="settings_screen_profile">Profile</string>
    <string name="settings_screen_terms">Terms</string>
    <string name="sign_in_screen_email">Email</string>
    <string name="sign_in_screen_email_placeholder">Digite seu email aqui</string>
    <string name="sign_in_screen_password">Senha</string>
    <string name="sign_in_screen_password_placeholder">Digite sua senha aqui</string>
    <string name="sign_in_screen_ok">Login</string>
    <string name="settings_screen_sign_up">Sign Up</string>
    <string name="service_terms">Termos de Serviço</string>
    <string name="sign_up_screen_email">Email</string>
    <string name="sign_up_screen_email_placeholder">Digite seu email aqui</string>
    <string name="sign_up_screen_password_placeholder">Digite sua senha aqui</string>
    <string name="sign_up_screen_password">Senha</string>
    <string name="sign_up_screen_repeatpass_placeholder">Confirme sua senha aqui</string>
    <string name="sign_up_screen_repeatpass">Confirme a senha</string>
    <string name="sign_up_screen_user_registration">Cadastro de Usuário</string>
    <string name="sign_up_btn_registration">Cadastrar</string>
    <string name="sign_up_user_terms_checkbox">Declaro que li e aceito os termos de uso</string>
    <string name="terms_content">Sociedade Esportiva Palmeiras (pronúncia em português: [sosiedˈadʒi ispoɾtʃˈivə pawmˈejɾəs]), conhecida popularmente como Palmeiras, é um clube poliesportivo brasileiro da cidade de São Paulo, capital do estado homônimo. Foi fundado em 26 de agosto de 1914 e suas cores, presentes no escudo e bandeira oficial, são o verde e branco.[3] O vermelho, presente desde sua fundação em 1914, foi excluído durante a Segunda Guerra Mundial, por pressão do governo de Getúlio Vargas, na mesma reunião que formalizou a mudança de nome de Palestra Italia para Palmeiras.Tem como modalidade esportiva principal o futebol, como um dos clubes mais vencedores e de maior relevância em todo o continente, além de estar entre aqueles com maior torcida do país.[5] Seus títulos mais importantes conquistados no futebol são as Copas Libertadores da América de 1999,[6] 2020[7] e de 2021,[8] e a Copa Rio (internacional) de 1951, considerado na época como um Mundial de Clubes de futebol[9] e reconhecido como tal pela FIFA, por meio do presidente da entidade, Joseph Blatter, em agosto de 2014, sendo uma decisão do Comitê Executivo da FIFA de 7 de junho[10][11][12][13][14] e por meio de documento encaminhado ao Ministério do Esporte do Brasil em novembro do mesmo ano.[15][16] A entidade, no entanto, não reconhece a competição como um torneio FIFA e reforçou este posicionamento em outubro de 2017, quando reconheceu os vencedores da Copa Intercontinental como campeões mundiais,[17] sem, também, promover a unificação da Copa Intercontinental com a sua atual competição.[18][19] No âmbito internacional, o clube também conquistou a Copa Mercosul de 1998 e a Recopa Sul-Americana de 2022.Eleito o melhor time do mundo de 2021 no ranking da Federação Internacional de História e Estatísticas do Futebol (IFFHS, na sigla em inglês),[21] o Palmeiras é a equipe brasileira com o maior número de títulos de abrangência nacional conquistados, sendo o único a vencer todas as competições oficiais que disputou criadas no País, inicialmente pela Confederação Brasileira de Desportos (CBD) e, a partir de 1980, pela Confederação Brasileira de Futebol (CBF).[22] O alviverde possui 18 conquistas deste porte,[23] com destaque maior para seus 12 títulos do Campeonato Brasileiro (atual recordista):[24] 1960, 1967,(1) 1967,(2) 1969, 1972, 1973, 1993, 1994, 2016, 2018, 2022 e 2023. Além destes campeonatos, o Palmeiras já venceu no país as Copas do Brasil de 1998, 2012, 2015 e de 2020, a Supercopa do Brasil de 2023 e a Copa dos Campeões de 2000, competições também organizadas pela entidade máxima do futebol brasileiro.No Estado de São Paulo, o Palmeiras também é um dos principais vencedores, com 25 conquistas do Campeonato Paulista de Futebol e mais dois títulos extra da mesma competição. Em 1996, o alviverde conquistou o estadual daquele ano com a melhor campanha de uma equipe na era profissional neste campeonato.[25] Na ocasião, foi campeão com 83 pontos ganhos em 90 possíveis, com um índice de aproveitamento de 92,2% dos pontos disputados e 102 gols marcados em 30 jogos realizados. Desde então, esta marca jamais foi alcançada por qualquer outra equipe na competição.No mais recente Ranking Nacional de Clubes da CBF, que leva em conta o comportamento das equipes nas últimas cinco temporadas eque foi divulgado em dezembro de 2023, o Palmeiras é o segundo colocado, com 15372 pontos.[2] No último ranking da confederação que levou em conta um período histórico mais abrangente do futebol brasileiro e que foi divulgado em 2011, o Palmeiras foi o líder, com 2366 pontos.[27] Em 2005, no dia 11 de outubro, foi sancionada na cidade de São Paulo a Lei n.º 14 060, que definiu o dia 20 de setembro como o Dia da Sociedade Esportiva Palmeiras, que passou a ser lembrado anualmente na capital paulista, já que passou a integrar o Calendário Oficial do Município.</string>
    <string name="read_terms">Ler Termos</string>
    <string name="search_here">Pesquisar no MyFirstAppMovie...</string>
    <string name="search">Busca</string>
    <string name="cancelar">Cancelar</string>
</resources>