<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/userSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/loggedUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_sign_out"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_profile"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/noLoggedUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_sign_in"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_sign_up"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_terms"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>